--- a/html/quizPage.html
+++ b/html/quizPage.html
@@ -38,6 +38,7 @@
           </ul>
           <h4 class="question_range"></h4>
           <button id="Submit">Submit</button>
+          <label for="feedback" id="feedback">Feedback Here</label>
           <div id="showScore" class="scoreArea"></div>
         </div>
       </div>
@@ -45,6 +46,5 @@
   </div>
   </div>
 </body>
-<script src="../first.js"></script>
-
+<script src="../Js/quizPage.js"></script>
 </html>
