Complete all work of js

--- a/html/login.html
+++ b/html/login.html
@@ -11,13 +11,13 @@
 
   <body>
     <div class="box">
-      <form autocomplete="on">
+      <form autocomplete="off">
         <h2>Sign in</h2>
 
         <div class="inputBox">
           <input
             type="text"
-            required="required"
+            required 
             id="shaking"
             maxlength="30"
             class="UserName"
@@ -28,7 +28,7 @@
         </div>
 
         <div class="inputBox">
-          <input type="password" required="required" maxlength="10" class="password"/>
+          <input type="password" required maxlength="10" class="password" />
           <span>Password</span>
           <i></i>
         </div>
