Completed all js work

--- a/html/true-false.html
+++ b/html/true-false.html
@@ -27,7 +27,7 @@
           <h4 class="question_range"></h4>
           <button id="Submit">Submit</button>
           <label for="feedback" id="feedback">Feedback Here</label>
-          <div id="showScore" class="scoreArea"></div>
+          <div id="showScore" class="scoreArea" style="display: none;"></div>
         </div>
       </div>
     </div>
