--- a/html/quizPage.html
+++ b/html/quizPage.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="category">
-    <select name="" id="categories" onchange="categoryChange()">
+   <select name="" id="categories" onchange="categoryChange()">
         <option value="MCQ" id="MCQ">MCQ</option>
         <option value="True-False" id="True-False">True-False</option>
         <option value="Math" id="Math">Math</option>
@@ -43,7 +43,7 @@
               <h4 class="question_range"></h4>
               <button id="Submit">Submit</button>
               <label for="feedback" id="feedback">Feedback Here</label>
-              <div id="showScore" class="scoreArea"></div>
+              <div id="showScore" class="scoreArea" style="display: none;"></div>
             </div>
           </div>
         </div>
