--- a/html/Math.html
+++ b/html/Math.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="../css/Math.css">
 </head>
 <body>
+  <div class="category">
+    <select name="" id="categories" onchange="categoryChange()">
+         <option value="MCQ" id="MCQ">MCQ</option>
+         <option value="True-False" id="True-False">True-False</option>
+       </select>
   <div class="main-div">
     <div class="inner-div">
       <div class="container">
@@ -25,6 +30,7 @@
           <div id="showScore" class="scoreArea" style="display: none;"></div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </div>
