--- a/html/true-false.html
+++ b/html/true-false.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="../css/True-False.css">
 </head>
 <body>
+  <div class="category">
+    <select name="" id="categories" onchange="categoryChange()">
+         <option value="MCQ" id="MCQ">MCQ</option>
+         <option value="Math" id="Math">Math</option>
+       </select>
   <div class="main-div">
     <div class="inner-div">
       <div class="container">
@@ -29,6 +34,7 @@
           <label for="feedback" id="feedback">Feedback Here</label>
           <div id="showScore" class="scoreArea" style="display: none;"></div>
         </div>
+      </div>
       </div>
     </div>
   </div>
